--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,7 +85,7 @@ stages:
     burgrName: 'validate'
     burgrType: 'validate'
     stageName: 'validate'
-    stageDisplayName: Run UTs and trigger SonarQube analysis
+    stageDisplayName: Run UTs and trigger CodeScan analysis
     jobs:
     - job: test_windows
       displayName: Run unit tests on Windows
@@ -160,7 +160,7 @@ stages:
           jdkVersionOption: '1.11'
           mavenOptions: $(MAVEN_OPTS)
     - job: sonarqube
-      displayName: SonarQube analysis on Next
+      displayName: CodeScan analysis on Next
       variables:
         MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
         MAVEN_OPTS: '-Xmx3072m -Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
