--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.sonarsource.sonarlint.ls</groupId>
   <artifactId>sonarlint-language-server</artifactId>
-  <version>2.2-SNAPSHOT</version>
+  <version>2.2-CODESCAN</version>
   <packaging>jar</packaging>
   <name>SonarLint Language Server</name>
   <description>SonarLint Language Server</description>
@@ -24,7 +24,7 @@
 
   <properties>
     <jdk.min.version>11</jdk.min.version>
-    <sonarlint.core.version>7.1.0.41944</sonarlint.core.version>
+    <sonarlint.core.version>7.1-CODESCAN</sonarlint.core.version>
     <!-- analyzers used for tests -->
     <sonar.java.version>6.15.0.25849</sonar.java.version>
     <sonar.javascript.version>6.2.1.12157</sonar.javascript.version>
@@ -47,6 +47,11 @@
       <groupId>org.sonarsource.sonarlint.core</groupId>
       <artifactId>sonarlint-core</artifactId>
       <version>${sonarlint.core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sonarsource.sonarqube</groupId>
+      <artifactId>sonar-plugin-api-impl</artifactId>
+      <version>8.5.0.37579</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
