--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
 
   <properties>
     <jdk.min.version>11</jdk.min.version>
-    <sonarlint.core.version>9.0.0.74282</sonarlint.core.version>
+    <sonarlint.core.version>9.2-CODESCAN</sonarlint.core.version>
+    <sonar-plugin-api.version>10.0.0.695</sonar-plugin-api.version>
     <!-- Version used by Xodus -->
     <kotlin.version>1.6.10</kotlin.version>
     <!-- analyzers used for tests -->
@@ -107,6 +108,19 @@
       <artifactId>kotlin-stdlib</artifactId>
       <version>${kotlin.version}</version>
       <scope>runtime</scope>
+    </dependency>
+
+    <!-- Needed for reasons unknown or apex parser doesn't work -->
+    <dependency>
+      <groupId>org.sonarsource.api.plugin</groupId>
+      <artifactId>sonar-plugin-api</artifactId>
+      <version>${sonar-plugin-api.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- unit tests -->
